# docs-uml

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
python/: delete_empty_file.py  delete_empty_latex_files.py  delete_empty_markdown_files.py  dev.py  env.py  format_latex.py  format_latex_terminology.py  format_markdown_punctuation.py  main.py  mermaid_to_png.py  plantuml_to_png.py  sync_abbr.py
temp/00-UseCase/: UML-UseCase-overview.puml
temp/01-UseCase/: UML-UseCase-Admin.puml  UML-UseCase-Guest.puml  UML-UseCase-User.puml  UML-UseCase-VIP.puml  UML-UseCase-overview.puml
temp/01-User/: User.tex
temp/02-BFD/: BFD.puml
temp/02-User/: User.tex
temp/03-BFD/: BFD.puml
temp/03-SubDomain/: SubDomain-Core.tex  SubDomain-Generic.tex  SubDomain-Supporting.tex  SubDomainMindMap.mmd
temp/04-SubDomain/: SubDomain-Core.tex  SubDomain-Generic.tex  SubDomain-Supporting.tex  SubDomainMindMap.mmd
temp/04-activity/: UML-Activity-sample.puml
temp/05-sequence/: UML-Sequence-.puml  UML-Sequence-.tex  UML-Sequence-01.puml  UML-Sequence-01.tex  UML-Sequence-02.puml  UML-Sequence-02.tex  UML-Sequence-03.puml  UML-Sequence-03.tex  UML-Sequence-04.1.tex  UML-Sequence-04.2.1.tex  UML-Sequence-04.2.2.puml  UML-Sequence-04.2.2.tex  UML-Sequence-04.2.3.puml  UML-Sequence-04.2.3.tex  UML-Sequence-04.puml  UML-Sequence-04.tex  UML-Sequence-05.puml  UML-Sequence-05.tex  UML-Sequence-06.puml  UML-Sequence-06.tex  UML-Sequence-07.puml  UML-Sequence-07.tex  UML-Sequence-08.puml  UML-Sequence-08.tex  UML-Sequence-09.puml  UML-Sequence-09.tex  UML-Sequence-10.tex  (+61 more)
(+14 files in other folders)
